--- a/conchas.html
+++ b/conchas.html
@@ -3,26 +3,29 @@
     <head>
         <meta charset="UTF=8">
        <title> Odin Recipes Project</title>
+       <link rel="stylesheet" href="./css/tacos.css">
     </head>
-<h1>Conchas</h1>
 
-<img src="../Images/conchas.jpg">
+<body>
 
-<h2>Describtion:</h2>
-<h4><p>Conchas are traditional Mexican sweet bread rolls (a.k.a. pan dulce). Its name comes from the roll’s seashell-like appearance. Conchas consist of a sweet bread base and crunchy sugar topping. </p></h4>
+<div>Conchas</div>
 
-<h2>Ingredients:</h2>
-<h4>
-    <ul>
+<div><img class="image" src="../Images/conchas.jpg"></div>
+
+<h2 class="describtion">Describtion:</h2>
+<p class="describtion">Conchas are traditional Mexican sweet bread rolls (a.k.a. pan dulce). Its name comes from the roll’s seashell-like appearance. Conchas consist of a sweet bread base and crunchy sugar topping. </p>
+
+<h2 class="ingredients">Ingredients:</h2>
+
+    <ul class=ingredients>
         <li>For the bread: warm water, yeast, all-purpose flour, evaporated milk, white sugar, melted butter, an egg, salt, and ground cinnamon</li>
         <li>For the topping: white sugar, softened butter, all-purpose flour, ground cinnamon, vanilla extract</li>
     </ul>
-</h4>
 
-<h2>Steps:</h2>
+<h2 class="steps">Steps:</h2>
 
-<h4>
-    <ol>
+
+    <ol class="steps">
         <li>Activate the yeast.</li>
         <li>Make the dough, then turn it out on a floured surface and knead until it’s elastic.</li>
         <li>Let the dough rise in an oiled, covered bowl. </li>
@@ -31,6 +34,6 @@
         <li>Cut grooves into the topping, then let rise again. </li>
         <li>Bake in the preheated oven until lightly golden brown.</li>
     </ol>
-</h4>
 
+</body>
 </html>
