--- a/tacos.html
+++ b/tacos.html
@@ -3,17 +3,18 @@
     <head>
         <meta charset="UTF=8">
        <title> Odin Recipes Project</title>
+       <link rel="stylesheet" href="./css/tacos.css">
     </head>
- <h1>Tacos</h1>
+<body>
+<div>Tacos</div>
+<div><img class="image" src="../Images/Tacos.jpg"></div> 
 
-    <img src="../Images/Tacos.jpg">
+<h2 class="describtion">Describtion:</h2>
+<p class="describtion">Mexican birria tacos, Jalisco-style, made with braised beef that's slow-cooked in a fragrant 3-chile sauce with a delicious spice mix. Crispy tacos, and tender, mouth-watering beef team up with melted Mexican cheese in this impressive meal. This recipe takes a little time but it's so worth it!</p>
 
-<h2>Describtion:</h2>
-<h4><p>Mexican birria tacos, Jalisco-style, made with braised beef that's slow-cooked in a fragrant 3-chile sauce with a delicious spice mix. Crispy tacos, and tender, mouth-watering beef team up with melted Mexican cheese in this impressive meal. This recipe takes a little time but it's so worth it!</p> </h4>
+<h2 class="ingredients">Ingredients:</h2>
 
-<h2>Ingredients:</h2>
-<h4>
-<ul>
+<ul class="ingredients">
     <li>Dried Chile peppers</li>
     <li>Beef</li>
     <li>Seasonings: salt, pepper, fresh garlic, while cloves, cinnamon, cumin, thyme, marjoram, and oregano</li>
@@ -22,12 +23,12 @@
     <li>Vinegar</li>
     <li>Onion and cilantro</li>
 </ul>
-</h4>
 
-<h2>Steps:</h2>
 
-<h4>
-<ol>
+<h2 class="steps">Steps:</h2>
+
+
+<ol class="steps">
     <li>Boil the dried peppers for 5 minutes, then remove from heat and let the peppers soak until the water is cool. Drain, reserving some water.</li>
     <li>Season the beef and sear on all sides in oil in a Dutch oven.</li>
     <li>Grill the tomatoes until the skin is blistered and begins to peel.</li>
@@ -36,6 +37,7 @@
     <li>Warm the tortillas on the griddle. Fill each tortilla with meat, onions, and cilantro.</li>
     <li>Serve agua de horchata and enjoy!</li>
 </ol>
-</h4>
+
+</body>
 
 </html>
