--- a/index.html
+++ b/index.html
@@ -3,17 +3,31 @@
     <head>
         <meta charset="UTF=8">
        <title> Odin Recipes Project</title>
+       <link rel="stylesheet" href="./css/index.css">
     </head>
-<h1>Odin Recipes</h1>
 
-<h4>
-<ul>
-    <li><a href="recipes/tacos.html">How To Make Birria Tacos</a></li>
-    
-    <li><a href="recipes/conchas.html">How To Make Conchas</a></li>
+<body>
 
-    <li><a href="recipes/carne-asada.html">Carne Asada</a> </li>
-</ul>
+ <div>Odin Recipes </div>
+ <p>Mexican Eiditon</p>
+
+ <div><img class="flag" src="./Images/flag.jpg"></div>
+
+<h4 class="links">
+ <button><a href="tacos.html">How To Make Birria Tacos</a> </button>
 </h4>
+    
+<h4 class="links">
+ <button><a href="conchas.html">How To Make Conchas</a></button>
+</h4>
+
+<h4 class="links">
+<button><a href="carne-asada.html">How To Marinate Carne Asada</a></button> 
+</h4>
+
+
+</body>
+
+
 
 </html>
