--- a/tacos.html
+++ b/tacos.html
@@ -9,10 +9,10 @@
 <div>Tacos</div>
 <div><img class="image" src="../Images/Tacos.jpg"></div> 
 
-<h2 class="describtion">Describtion:</h2>
+<h2 class="describtionname">Describtion:</h2>
 <p class="describtion">Mexican birria tacos, Jalisco-style, made with braised beef that's slow-cooked in a fragrant 3-chile sauce with a delicious spice mix. Crispy tacos, and tender, mouth-watering beef team up with melted Mexican cheese in this impressive meal. This recipe takes a little time but it's so worth it!</p>
 
-<h2 class="ingredients">Ingredients:</h2>
+<h2 class="ingredientsname">Ingredients:</h2>
 
 <ul class="ingredients">
     <li>Dried Chile peppers</li>
@@ -25,7 +25,7 @@
 </ul>
 
 
-<h2 class="steps">Steps:</h2>
+<h2 class="stepsname">Steps:</h2>
 
 
 <ol class="steps">
